2008-02-27  Goedson Teixeira Paixao  <goedson@debian.org>

	* doc/C/man/gnotime.1: Fixed the manpage's text

	* src/notes-area.c: include menus.h for prototype of the
	menus_get_popup function.

2008-02-15  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Changed version to 2.3.0

	* NEWS: Prepare announcement of 2.3.0 release

	* configure.in: Check that guile version is >= 1.8

	* src/ghtml.c: Added functions that make use of the billing block
	(Patch #1872426)

2008-02-14  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/notes-area.c (projects_tree_clicked): Added callback
	function for displaying the context menu when user right clicks on
	projects tree.
	(notes_area_add_projects_tree): Connect projects tree to the right
	click callback function.

2008-02-13  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/Makefile.am: Made changes according to changes in
	configure.in.

	* configure.in:
	  - Separately check for glib, GTK+, libgnome and libgnomeui
	  - Fix check for libgconf
	  - Make minimum required versions of:
	    - GTK+ = 2.10
	    - GLIB = 2.14

2008-02-08  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/xml-write.c: Added BAD_CAST in the invocations to xml*
	functions to avoid warnings about different "signedness" in
	parameters.

2008-02-03  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/prefs.c: removed the unused functions get_optionmenu_item
	and set_optionmenu_item

	* glade/prefs.glade: Use GtkEntry instead of the deprecated
	GnomeEntry.

2008-02-02  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/prefs.glade: Use GtkComboBox instead of the deprecated
	GtkOptionMenu
	  - Use GtkFileChooserButton instead of the deprecated
	  GnomeFileEntry

	* src/prefs.c: Use GtkComboBox instead of the deprecated
	  GtkOptionMenu
	  - Use GtkFileChooserButton instead of the deprecated
	  GnomeFileEntry

2008-02-01  Goedson Teixeira Paixao  <goedson@debian.org>
